--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "typescript": "^5.1.6"
   },
   "scripts": {
-    "build": "tsc",
+    "build": "rm -rf ./dist && tsc",
     "build:w": "tsc -w",
     "dev": "nodemon ./dist/index.js",
     "start": "node ./dist/index.js"
